--- a/loginForm/loginForm.csproj
+++ b/loginForm/loginForm.csproj
@@ -10,8 +10,12 @@
 
   <ItemGroup>
     <None Remove="assets\blur_image.png" />
+    <None Remove="assets\eye_closed.png" />
+    <None Remove="assets\eye_open.png" />
+    <None Remove="assets\key_icon.png" />
     <None Remove="assets\login-banner.png" />
     <None Remove="assets\Martify.png" />
+    <None Remove="assets\user_icon.png" />
     <None Remove="assets\x_icon.png" />
     <None Remove="fonts\YanoneKaffeesatz-Bold.ttf" />
     <None Remove="fonts\YanoneKaffeesatz-ExtraLight.ttf" />
@@ -24,8 +28,12 @@
 
   <ItemGroup>
     <Resource Include="assets\blur_image.png" />
+    <Resource Include="assets\eye_closed.png" />
+    <Resource Include="assets\eye_open.png" />
+    <Resource Include="assets\key_icon.png" />
     <Resource Include="assets\login-banner.png" />
     <Resource Include="assets\Martify.png" />
+    <Resource Include="assets\user_icon.png" />
     <Resource Include="assets\x_icon.png" />
   </ItemGroup>
 
