--- a/Martify/Martify.csproj
+++ b/Martify/Martify.csproj
@@ -10,19 +10,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\fonts\BungeeSpice-Regular.ttf" />
     <None Remove="Resources\images\blur_image.png" />
+    <None Remove="Resources\images\close1.png" />
     <None Remove="Resources\images\close_program.png" />
     <None Remove="Resources\images\eye_closed.png" />
     <None Remove="Resources\images\eye_open.png" />
     <None Remove="Resources\images\key_icon.png" />
     <None Remove="Resources\images\login-banner.png" />
     <None Remove="Resources\images\Martify.png" />
-    <None Remove="Resources\images\maximize.png" />
-    <None Remove="Resources\images\minimize.png" />
-    <None Remove="Resources\images\restore_down.png" />
+    <None Remove="Resources\images\maximize1.png" />
     <None Remove="Resources\images\user_icon.png" />
     <None Remove="Resources\fonts\PasseroOne-Regular.ttf" />
-    <None Remove="Resources\fonts\RubikGlitchPop-Regular.ttf" />
     <None Remove="Resources\fonts\YanoneKaffeesatz-Bold.ttf" />
     <None Remove="Resources\fonts\YanoneKaffeesatz-ExtraLight.ttf" />
     <None Remove="Resources\fonts\YanoneKaffeesatz-Light.ttf" />
@@ -33,10 +32,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Resources\fonts\BungeeSpice-Regular.ttf">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\icon\Martify.ico">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\images\blur_image.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\images\close1.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\images\close_program.png">
@@ -57,22 +62,13 @@
     <Resource Include="Resources\images\Martify.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Resources\images\maximize.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\images\minimize.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\images\restore_down.png">
+    <Resource Include="Resources\images\maximize1.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\images\user_icon.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\fonts\PasseroOne-Regular.ttf">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\fonts\RubikGlitchPop-Regular.ttf">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
