--- a/Martify/Martify.csproj
+++ b/Martify/Martify.csproj
@@ -21,10 +21,16 @@
     <None Remove="Resources\Fonts\Rubik-Regular.ttf" />
     <None Remove="Resources\Images\background.png" />
     <None Remove="Resources\Images\close_program.png" />
+    <None Remove="Resources\Images\dashboard_active.png" />
+    <None Remove="Resources\Images\dashboard_hover.png" />
+    <None Remove="Resources\Images\dashboard_normal.png" />
     <None Remove="Resources\Images\eye_closed.png" />
     <None Remove="Resources\Images\eye_open.png" />
     <None Remove="Resources\Images\key_icon.png" />
     <None Remove="Resources\Images\Martify.png" />
+    <None Remove="Resources\Images\products_active.png" />
+    <None Remove="Resources\Images\products_hover.png" />
+    <None Remove="Resources\Images\products_normal.png" />
     <None Remove="Resources\Images\user.png" />
     <None Remove="Resources\Images\user_icon.png" />
     <None Remove="Resources\Fonts\PasseroOne-Regular.ttf" />
@@ -61,6 +67,15 @@
     <Resource Include="Resources\Images\close_program.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Resources\Images\dashboard_active.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\dashboard_hover.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\dashboard_normal.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\Images\Martify.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
@@ -71,6 +86,15 @@
 
   <ItemGroup>
     <Resource Include="Resources\Fonts\YanoneKaffeesatz-Regular.ttf">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\products_active.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\products_hover.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\products_normal.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Images\user.png">
