Enhance employee management functionality
- Added support for selecting and displaying employee images, including preview functionality and image copying logic.
- Updated `AddEmployee` window with new fields (e.g., hire date), improved layout, and a draggable area for better user experience.
- Enhanced input validation in `AddEmployeeVM` to ensure data integrity (e.g., hire date, age, unique phone numbers).
- Refactored `AddEmployeeVM` with helper methods for error handling and ID generation.
- Added new image resources (`upload_image.png`) and updated project files to include them.
- Updated XAML files (`AddEmployee.xaml`, `LoginWindow.xaml`, `MainWindow.xaml`, `ImageRes.xaml`) for improved accessibility and resource binding.
- Made binary changes to `Martify.db` and added new binary files (`NV002Emp20251128033535.png`, `NV003Emp20251128034018.jpg`).
- Deleted unused binary file `nv001Emp.png`.

--- a/Martify/Martify.csproj
+++ b/Martify/Martify.csproj
@@ -40,6 +40,7 @@
     <None Remove="Resources\Images\settings_normal.png" />
     <None Remove="Resources\Images\staff_active.png" />
     <None Remove="Resources\Images\staff_normal.png" />
+    <None Remove="Resources\Images\upload_image.png" />
     <None Remove="Resources\Images\user_icon.png" />
     <None Remove="Resources\Fonts\PasseroOne-Regular.ttf" />
     <None Remove="Resources\Fonts\YanoneKaffeesatz-Bold.ttf" />
@@ -124,6 +125,9 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Images\staff_normal.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\upload_image.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
