--- a/Martify/Martify.csproj
+++ b/Martify/Martify.csproj
@@ -27,6 +27,7 @@
     <None Remove="Resources\Images\dashboard_hover2.png" />
     <None Remove="Resources\Images\dashboard_normal.png" />
     <None Remove="Resources\Images\dashboard_normal2.png" />
+    <None Remove="Resources\Images\defaultproduct.png" />
     <None Remove="Resources\Images\eye_closed.png" />
     <None Remove="Resources\Images\eye_open.png" />
     <None Remove="Resources\Images\key_icon.png" />
@@ -90,6 +91,9 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Images\dashboard_normal.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\defaultproduct.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Images\Martify.png">
