Add Invoices feature with UI, filtering, and details panel
Introduced a new Invoices view and viewmodel for managing and viewing invoices, including search and filter functionality and a sliding details panel. Updated navigation to include Invoices, replaced Receipts label, and enhanced InvoiceDetail model with a computed Total property. Added new fonts for improved UI styling, updated resource dictionaries, and made necessary database changes to support the feature. Supporting font and image files were also added.

--- a/Martify/Martify.csproj
+++ b/Martify/Martify.csproj
@@ -18,6 +18,8 @@
 
   <ItemGroup>
     <None Remove="Resources\Fonts\BungeeSpice-Regular.ttf" />
+    <None Remove="Resources\Fonts\Charm-Regular.ttf" />
+    <None Remove="Resources\Fonts\FleurDeLeah-Regular.ttf" />
     <None Remove="Resources\Fonts\Rubik-Regular.ttf" />
     <None Remove="Resources\Images\anonymous.png" />
     <None Remove="Resources\Images\background.png" />
@@ -55,6 +57,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Resources\Fonts\Charm-Regular.ttf">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Fonts\FleurDeLeah-Regular.ttf">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\Fonts\Rubik-Regular.ttf">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
