Add custom exit confirmation dialog with cute cat image
Introduced a CloseAlert UserControl that displays a modal confirmation dialog when the user attempts to close the application. The dialog features a cute cat image, an alert icon, and "Yes"/"No" options. Updated WindowControlVM to manage dialog visibility and handle exit confirmation logic. Modified WindowControl.xaml to integrate the new dialog and updated project resources to include the new image. This improves user experience by preventing accidental exits.

--- a/Martify/Martify.csproj
+++ b/Martify/Martify.csproj
@@ -24,6 +24,7 @@
     <None Remove="Resources\Images\anonymous.png" />
     <None Remove="Resources\Images\background.png" />
     <None Remove="Resources\Images\close_program.png" />
+    <None Remove="Resources\Images\cute_cat.png" />
     <None Remove="Resources\Images\dashboard_active.png" />
     <None Remove="Resources\Images\dashboard_hover.png" />
     <None Remove="Resources\Images\dashboard_hover2.png" />
@@ -94,6 +95,9 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Images\close_program.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\cute_cat.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Images\dashboard_active.png">
