feat(sell): Thêm âm thanh quét QR và fix lỗi cập nhật trạng thái giỏ hàng
Thay đổi chính trong ProductSelectionVM:

Tích hợp âm thanh phản hồi (Audio Feedback):
   - Thêm chức năng phát âm thanh khi quét mã QR cho các trạng thái:
     + Thành công (store-scanner-beep.wav)
   - Cấu hình đường dẫn file âm thanh tại thư mục: `Resources/Sounds`.

--- a/Martify/Martify.csproj
+++ b/Martify/Martify.csproj
@@ -184,6 +184,12 @@
 	  <None Update="Assets\administrator.png">
 	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </None>
+	  <None Update="Resources\Sounds\store-scanner-beep.mp3">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Resources\Sounds\store-scanner-beep.wav">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 
