--- a/Martify/Martify.csproj
+++ b/Martify/Martify.csproj
@@ -25,32 +25,6 @@
     <None Remove="Resources\Fonts\Charm-Regular.ttf" />
     <None Remove="Resources\Fonts\FleurDeLeah-Regular.ttf" />
     <None Remove="Resources\Fonts\Rubik-Regular.ttf" />
-    <None Remove="Resources\Images\anonymous.png" />
-    <None Remove="Resources\Images\background.png" />
-    <None Remove="Resources\Images\close_program.png" />
-    <None Remove="Resources\Images\cute_cat.png" />
-    <None Remove="Resources\Images\dashboard_active.png" />
-    <None Remove="Resources\Images\dashboard_hover.png" />
-    <None Remove="Resources\Images\dashboard_hover2.png" />
-    <None Remove="Resources\Images\dashboard_normal.png" />
-    <None Remove="Resources\Images\dashboard_normal2.png" />
-    <None Remove="Resources\Images\defaultproduct.png" />
-    <None Remove="Resources\Images\eye_closed.png" />
-    <None Remove="Resources\Images\eye_open.png" />
-    <None Remove="Resources\Images\key_icon.png" />
-    <None Remove="Resources\Images\Martify.png" />
-    <None Remove="Resources\Images\minimize_program.png" />
-    <None Remove="Resources\Images\products_active.png" />
-    <None Remove="Resources\Images\products_hover.png" />
-    <None Remove="Resources\Images\products_normal.png" />
-    <None Remove="Resources\Images\receipt_active.png" />
-    <None Remove="Resources\Images\receipt_normal.png" />
-    <None Remove="Resources\Images\settings_active.png" />
-    <None Remove="Resources\Images\settings_normal.png" />
-    <None Remove="Resources\Images\staff_active.png" />
-    <None Remove="Resources\Images\staff_normal.png" />
-    <None Remove="Resources\Images\upload_image.png" />
-    <None Remove="Resources\Images\user_icon.png" />
     <None Remove="Resources\Fonts\PasseroOne-Regular.ttf" />
     <None Remove="Resources\Fonts\YanoneKaffeesatz-Bold.ttf" />
     <None Remove="Resources\Fonts\YanoneKaffeesatz-ExtraLight.ttf" />
@@ -103,6 +77,15 @@
     <Resource Include="Resources\Images\background.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Resources\Images\cart_active.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\cart_hover.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\cart_normal.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\Images\close_program.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
@@ -110,6 +93,9 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Images\dashboard_active.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\dashboard_hover.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Images\dashboard_normal.png">
@@ -131,12 +117,15 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Images\minimize_program.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\Images\products_active.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Resources\Images\products_normal.png">
+    <Resource Include="Resources\Images\product_active.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\product_hover.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\product_normal.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Images\receipt_active.png">
