Refactor product details UI, optimize supplier binding and fix panel toggle logic

--- a/Martify/Martify.csproj
+++ b/Martify/Martify.csproj
@@ -105,7 +105,7 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Images\defaultproduct.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Images\Martify.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
