chore: move GSAP libraries to local for offline support
- Download gsap.min.js and MorphSVGPlugin.min.js into WebAssets/YetiAnimatedLogin/libs
- Update index.html to replace CDN links with local file paths
- Remove gsap-legacy reference (already included in newer GSAP versions)
- Configure "Copy to Output Directory" to ensure libraries are bundled on build

--- a/Martify/Martify.csproj
+++ b/Martify/Martify.csproj
@@ -202,6 +202,12 @@
 	  <None Update="WebAssets\YetiAnimatedLogin\index.html">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
+	  <None Update="WebAssets\YetiAnimatedLogin\libs\gsap.min.js">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Update="WebAssets\YetiAnimatedLogin\libs\MorphSVGPlugin.min.js">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	  <None Update="WebAssets\YetiAnimatedLogin\script.js">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
